# ROS2_Stereo_Project

./: .gitignore  .gitmodules  README.md  install.sh  run.sh
misc/: build.sh  camera_manager.service  clean.sh  ethConf.sh  image_processing.service  setup.sh  stm_comm.service
nucleo_case/: Nucleo_Case.stl  Nucleo_Case_Cover.stl
src/ROS2_Command_Tester/: CMakeLists.txt  README.md  package.xml
src/ROS2_Command_Tester/include/: CommandApp.hpp
src/ROS2_Command_Tester/launch/: launch.py
src/ROS2_Command_Tester/ressources/: builder.ui
src/ROS2_Command_Tester/src/: CommandApp.cpp  gui_command.cpp
src/ROS2_Custom_Msg/: CMakeLists.txt  README.md  package.xml
src/ROS2_Custom_Msg/srv/: Stcommand.srv
src/ROS2_Image_Processing/: CMakeLists.txt  installJetpack.sh  package.xml  readme.md
src/ROS2_Image_Processing/include/: ImageProcessor.hpp
src/ROS2_Image_Processing/launch/: launch.py
src/ROS2_Image_Processing/src/: ImageProcessor.cpp  image_processor.cpp
src/ROS2_LUCID_Triton_camera_driver/: .gitignore  CMakeLists.txt  package.xml  readme.md
src/ROS2_LUCID_Triton_camera_driver/config/: calibration_cam_rgb_left.yaml  calibration_cam_rgb_right.yaml  camera.yaml
src/ROS2_LUCID_Triton_camera_driver/include/: camera.hpp  cameraManager.hpp  config.hpp
src/ROS2_LUCID_Triton_camera_driver/launch/: launch.py
src/ROS2_LUCID_Triton_camera_driver/src/: camera.cpp  cameraManager.cpp  camera_manager.cpp
src/ROS2_STM32_Comm/: CMakeLists.txt  package.xml  readme.md
src/ROS2_STM32_Comm/include/: StmComm.hpp
src/ROS2_STM32_Comm/launch/: launch.py
src/ROS2_STM32_Comm/src/: StmComm.cpp  stm_comm.cpp
