<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>camera_manager</name>
  <version>0.2.1</version>
  <description>A node to get and publish images taken from LUCID Triton cameras</description>
  <maintainer email="camille.colimard@gmail.com">tlr</maintainer>
  <license>The Unlicense</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>ros2launch</exec_depend>

  <depend>rclcpp</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>camera_info_manager</depend>
  


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
