<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>stm_comm</name>
  <version>0.1.0</version>
  <description>Handles communication with an STM32 for diverse commands</description>
  <maintainer email="camille.colimard@gmail.com">tlr</maintainer>
  <license>Unlicense</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <depend>libserial</depend>
  <depend>custom_msg</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
